--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>StorageManagement</groupId>
-	<artifactId>StorageManagement</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.shrigowri</groupId>
+	<artifactId>storage-s3</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>StorageManagement</name>
